--- a/cal_expected_value.html
+++ b/cal_expected_value.html
@@ -75,6 +75,9 @@
 			case "17":
 				var dispValue = JSON.parse('{"kishuInfo":{"id":"17","name":"麻雀物語~役満乱舞のドラム大戦~M2BU3","tokaBorder":"22.8","totalRate":"61.523","denSupRate":"0.06","rironAveDedama":"","default1R":"90","active":"1"},"kishuAtariInfo":[{"id":"17","no":"1","upDown1":"down","round1":"3","upDown2":"-","round2":"0","roundSum":"3","tamasu":"270","shutsugenRate":"17.8"},{"id":"17","no":"2","upDown1":"down","round1":"4","upDown2":"-","round2":"0","roundSum":"4","tamasu":"360","shutsugenRate":"7.1"},{"id":"17","no":"3","upDown1":"down","round1":"5","upDown2":"-","round2":"0","roundSum":"5","tamasu":"450","shutsugenRate":"27.3"},{"id":"17","no":"4","upDown1":"down","round1":"6","upDown2":"-","round2":"0","roundSum":"6","tamasu":"540","shutsugenRate":"14.2"},{"id":"17","no":"5","upDown1":"down","round1":"8","upDown2":"-","round2":"0","roundSum":"8","tamasu":"720","shutsugenRate":"3.6"},{"id":"17","no":"6","upDown1":"down","round1":"10","upDown2":"-","round2":"0","roundSum":"10","tamasu":"900","shutsugenRate":"3.6"},{"id":"17","no":"7","upDown1":"down","round1":"12","upDown2":"-","round2":"0","roundSum":"12","tamasu":"1080","shutsugenRate":"3.6"},{"id":"17","no":"8","upDown1":"down","round1":"15","upDown2":"-","round2":"0","roundSum":"15","tamasu":"1350","shutsugenRate":"22.9"}]}');
 				break;
+			case "18":	
+				var dispValue = JSON.parse('{"kishuInfo":{"id":"18","name":"J-RUSH3 HSJ","tokaBorder":"17.000","totalRate":"76.186","denSupRate":"0.570","rironAveDedama":"1154.880","default1R":"96","active":"1"},"kishuAtariInfo":[{"id":"18","no":"1","upDown1":"up","round1":"4","upDown2":"-","round2":"0","roundSum":"4","tamasu":"384","shutsugenRate":"27.000"},{"id":"18","no":"2","upDown1":"up","round1":"15","upDown2":"-","round2":"0","roundSum":"15","tamasu":"1440","shutsugenRate":"73.000"}]}');
+				break;
 			}
 
 		var kishuInfo = dispValue['kishuInfo'];
