--- a/cal_expected_value.html
+++ b/cal_expected_value.html
@@ -78,6 +78,9 @@
 			case "18":	
 				var dispValue = JSON.parse('{"kishuInfo":{"id":"18","name":"J-RUSH3 HSJ","tokaBorder":"17.000","totalRate":"76.186","denSupRate":"0.570","rironAveDedama":"1154.880","default1R":"96","active":"1"},"kishuAtariInfo":[{"id":"18","no":"1","upDown1":"up","round1":"4","upDown2":"-","round2":"0","roundSum":"4","tamasu":"384","shutsugenRate":"27.000"},{"id":"18","no":"2","upDown1":"up","round1":"15","upDown2":"-","round2":"0","roundSum":"15","tamasu":"1440","shutsugenRate":"73.000"}]}');
 				break;
+			case "19":
+			    var dispValue = JSON.parse('{"kishuInfo":{"id":"19","name":"\uff93\uff9d\uff7d\uff80\u30fc\uff8a\uff9d\uff80\u30fc4 STA","tokaBorder":"18.100","totalRate":"40.687","denSupRate":"0.550","rironAveDedama":"564.210","default1R":"90","active":"1"},"kishuAtariInfo":[{"id":"19","no":"1","upDown1":"down","round1":"2","upDown2":"-","round2":"0","roundSum":"2","tamasu":"180","shutsugenRate":"12.200"},{"id":"19","no":"2","upDown1":"down","round1":"5","upDown2":"-","round2":"0","roundSum":"5","tamasu":"450","shutsugenRate":"55.100"},{"id":"184","no":"3","upDown1":"down","round1":"10","upDown2":"-","round2":"0","roundSum":"10","tamasu":"900","shutsugenRate":"32.700"}]}');
+			    break;
 			}
 
 		var kishuInfo = dispValue['kishuInfo'];
