--- a/cal_expected_value.html
+++ b/cal_expected_value.html
@@ -81,7 +81,8 @@
 			case "19":
 			    var dispValue = JSON.parse('{"kishuInfo":{"id":"19","name":"\uff93\uff9d\uff7d\uff80\u30fc\uff8a\uff9d\uff80\u30fc4 STA","tokaBorder":"18.100","totalRate":"40.687","denSupRate":"0.550","rironAveDedama":"564.210","default1R":"90","active":"1"},"kishuAtariInfo":[{"id":"19","no":"1","upDown1":"down","round1":"2","upDown2":"-","round2":"0","roundSum":"2","tamasu":"180","shutsugenRate":"12.200"},{"id":"19","no":"2","upDown1":"down","round1":"5","upDown2":"-","round2":"0","roundSum":"5","tamasu":"450","shutsugenRate":"55.100"},{"id":"184","no":"3","upDown1":"down","round1":"10","upDown2":"-","round2":"0","roundSum":"10","tamasu":"900","shutsugenRate":"32.700"}]}');
 			    break;
-			}
+			}case"20"
+			     var dispValue = JSON.parse('{"kishuInfo":{"id":"20","name":"\u771f\u30fb\u82b1\u306e\u6176\u6b212 L4-VH","tokaBorder":"20.000","totalRate":"113.990","denSupRate":"0.920","rironAveDedama":"1498.770","default1R":"117","active":"1"},"kishuAtariInfo":[{"id":"20","no":"1","upDown1":"down","round1":"6","upDown2":"-","round2":"0","roundSum":"6","tamasu":"702","shutsugenRate":"31.900"},{"id":"20","no":"2","upDown1":"down","round1":"16","upDown2":"-","round2":"0","roundSum":"16","tamasu":"1872","shutsugenRate":"68.100"}]}');
 
 		var kishuInfo = dispValue['kishuInfo'];
 
