--- a/index.html
+++ b/index.html
@@ -79,6 +79,7 @@
 <a href="#mokuzi">目次に戻る</a><br>
 </h3>
 <a href="./cal_expected_value.html?id=10">不二子 Lupin The End H1BZ1</a><br><br>
+<a href="./cal_expected_value.html?id=21">ビッグドリーム～神撃２５９VEｒ</a><br><br>
 <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 
 <hr>
