--- a/cal_expected_value.html
+++ b/cal_expected_value.html
@@ -86,7 +86,10 @@
                 break;
 			case "21":
 			    var dispValue = JSON.parse('{"kishuInfo":{"id":"21","name":"\uff8b\uff9e\uff6f\uff78\uff9e\uff84\uff9e\uff98\u30fc\uff91\uff5e\u795e\u6483259ver","tokaBorder":"20.000","totalRate":"79.630","denSupRate":"0.400","rironAveDedama":"1079.584","default1R":"88","active":"1"},"kishuAtariInfo":[{"id":"21","no":"1","upDown1":"up","round1":"2","upDown2":"down","round2":"2","roundSum":"4","tamasu":"352","shutsugenRate":"31.100"},{"id":"21","no":"2","upDown1":"up","round1":"8","upDown2":"down","round2":"8","roundSum":"16","tamasu":"1408","shutsugenRate":"68.900"}]}');
-		var kishuInfo = dispValue['kishuInfo'];
+				break;
+				}
+	
+	    var kishuInfo = dispValue['kishuInfo'];
 
 		var kishuID = kishuInfo['id'];
 
