--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 <a href="#mokuzi">目次に戻る</a><br>
 </h3>
 <a href="./cal_expected_value.html?id=16">ギルティクラウン AA</a><br><br>
-<a href="./cal_expected_value.html?id=13">金田一少年の事件簿2～地獄の傀儡師</a><br><br>
+<a href="./cal_expected_value.html?id=13">金田一少年の事件簿２</a><br><br>
 <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 
 <hr>
