--- a/cal_expected_value.html
+++ b/cal_expected_value.html
@@ -383,7 +383,7 @@ console.log(kishuInfo);
 </header>
 
 <div id="pan">
-	<a href="https://maru-t.bitbucket.io/">TOP</a> &gt; 機種番号：<span id="kishuID"></span> 機種名：<span id="kishuName"></span>
+	<a href="https://boshi-boat.github.io/">TOP</a> &gt; 機種番号：<span id="kishuID"></span> 機種名：<span id="kishuName"></span>
 </div>
 
 <!-- 記事内容ここから -->
