--- a/cal_expected_value.html
+++ b/cal_expected_value.html
@@ -87,7 +87,10 @@
 			case "21":
 			    var dispValue = JSON.parse('{"kishuInfo":{"id":"21","name":"\uff8b\uff9e\uff6f\uff78\uff9e\uff84\uff9e\uff98\u30fc\uff91\uff5e\u795e\u6483259ver","tokaBorder":"20.000","totalRate":"79.630","denSupRate":"0.400","rironAveDedama":"1079.584","default1R":"88","active":"1"},"kishuAtariInfo":[{"id":"21","no":"1","upDown1":"up","round1":"2","upDown2":"down","round2":"2","roundSum":"4","tamasu":"352","shutsugenRate":"31.100"},{"id":"21","no":"2","upDown1":"up","round1":"8","upDown2":"down","round2":"8","roundSum":"16","tamasu":"1408","shutsugenRate":"68.900"}]}');
 				break;
-				}
+			case "22":
+                var dispValue = JSON.parse('{"kishuInfo":{"id":"22","name":"\uff7d\uff70\uff8a\uff9f\uff70\u6d77\u7269\u8a9ein\u6c96\u7e044\uff5e\u685c\uff8a\uff9e\uff70\uff7c\uff9e\uff6e\uff9dSCA","tokaBorder":"20.000","totalRate":"51.873","denSupRate":"0.810","rironAveDedama":"688.500","default1R":"81","active":"1"},"kishuAtariInfo":[{"id":"22","no":"1","upDown1":"down","round1":"4","upDown2":"-","round2":"0","roundSum":"4","tamasu":"324","shutsugenRate":"37.500"},{"id":"22","no":"2","upDown1":"down","round1":"8","upDown2":"-","round2":"0","roundSum":"8","tamasu":"648","shutsugenRate":"37.500"},{"id":"22","no":"3","upDown1":"down","round1":"16","upDown2":"-","round2":"0","roundSum":"16","tamasu":"1296","shutsugenRate":"25.000"}]}');
+				break;
+			}
 	
 	    var kishuInfo = dispValue['kishuInfo'];
 
