--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
 <a href="./cal_expected_value.html?id=4">スーパー海物語IN沖縄4MTC</a><br><br>
 <a href="./cal_expected_value.html?id=6">スーパー海物語IN沖縄4 SBB</a><br><br>
 <a href="./cal_expected_value.html?id=9">スーパー海物語in沖縄4~桜バージョン~</a><br><br>
+<a href="./cal_expected_value.html?id=22">スーパー海物語in沖縄4~桜バージョン 319~</a><br><br>
 <a href="./cal_expected_value.html?id=18">J RASH3 HSJ</a><br><br>
 <a href="./cal_expected_value.html?id=20">真・花の慶次2</a><br><br>
 <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
