--- a/cal_expected_value.html
+++ b/cal_expected_value.html
@@ -90,6 +90,9 @@
 			case "22":
                 var dispValue = JSON.parse('{"kishuInfo":{"id":"22","name":"\uff7d\uff70\uff8a\uff9f\uff70\u6d77\u7269\u8a9ein\u6c96\u7e044\uff5e\u685c\uff8a\uff9e\uff70\uff7c\uff9e\uff6e\uff9dSCA","tokaBorder":"20.000","totalRate":"51.873","denSupRate":"0.810","rironAveDedama":"688.500","default1R":"81","active":"1"},"kishuAtariInfo":[{"id":"22","no":"1","upDown1":"down","round1":"4","upDown2":"-","round2":"0","roundSum":"4","tamasu":"324","shutsugenRate":"37.500"},{"id":"22","no":"2","upDown1":"down","round1":"8","upDown2":"-","round2":"0","roundSum":"8","tamasu":"648","shutsugenRate":"37.500"},{"id":"22","no":"3","upDown1":"down","round1":"16","upDown2":"-","round2":"0","roundSum":"16","tamasu":"1296","shutsugenRate":"25.000"}]}');
 				break;
+			case "23":
+			    var dispValue = JSON.parse('{"kishuInfo":{"id":"23","name":"\u5317\u6597\u306e\u62f36\uff5e\u5929\u7fd4\u767e\u70c8 FTB","tokaBorder":"17.700","totalRate":"106.430","denSupRate":"0.400","rironAveDedama":"1548.612","default1R":"117","active":"1"},"kishuAtariInfo":[{"id":"23","no":"1","upDown1":"up","round1":"2","upDown2":"down","round2":"2","roundSum":"4","tamasu":"468","shutsugenRate":"20.300"},{"id":"23","no":"2","upDown1":"up","round1":"4","upDown2":"down","round2":"4","roundSum":"8","tamasu":"936","shutsugenRate":"4.100"},{"id":"23","no":"3","upDown1":"up","round1":"8","upDown2":"down","round2":"8","roundSum":"16","tamasu":"1872","shutsugenRate":"75.600"}]}');
+				break;
 			}
 	
 	    var kishuInfo = dispValue['kishuInfo'];
