--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@
 <a href="#mokuzi">目次に戻る</a><br>
 </h3>
 <a href="./cal_expected_value.html?id=14">ダーカーブラック-黒の契約者-AA</a><br><br>
+<a href="./cal_expected_value.html?id=23">天翔百裂　FTB</a><br><br>
 <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 
 <hr>
