--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@
 </h3>
 <a href="./cal_expected_value.html?id=14">ダーカーブラック-黒の契約者-AA</a><br><br>
 <a href="./cal_expected_value.html?id=23">天翔百裂　FTB</a><br><br>
+<a href="./cal_expected_value.html?id=24">ドラム海物語77DS</a><br><br>
 <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 
 <hr>
