--- a/cal_expected_value.html
+++ b/cal_expected_value.html
@@ -93,7 +93,10 @@
 			case "23":
 			    var dispValue = JSON.parse('{"kishuInfo":{"id":"23","name":"北斗の拳６~天翔百裂FTB","tokaBorder":"17.700","totalRate":"106.430","denSupRate":"0.400","rironAveDedama":"1548.612","default1R":"117","active":"1"},"kishuAtariInfo":[{"id":"23","no":"1","upDown1":"up","round1":"2","upDown2":"down","round2":"2","roundSum":"4","tamasu":"468","shutsugenRate":"20.300"},{"id":"23","no":"2","upDown1":"up","round1":"4","upDown2":"down","round2":"4","roundSum":"8","tamasu":"936","shutsugenRate":"4.100"},{"id":"23","no":"3","upDown1":"up","round1":"8","upDown2":"down","round2":"8","roundSum":"16","tamasu":"1872","shutsugenRate":"75.600"}]}');
 				break;
-			}
+			case "24":	
+			    var dispValue = JSON.parse('{"kishuInfo":{"id":"24","name":"ドラム海物語77DS","tokaBorder":"19.300","totalRate":"34.010","denSupRate":"0.710","rironAveDedama":"462.000","default1R":"56","active":"1"},"kishuAtariInfo":[{"id":"24","no":"1","upDown1":"down","round1":"5","upDown2":"-","round2":"0","roundSum":"5","tamasu":"280","shutsugenRate":"37.500"},{"id":"24","no":"2","upDown1":"down","round1":"7","upDown2":"-","round2":"0","roundSum":"7","tamasu":"392","shutsugenRate":"37.500"},{"id":"24","no":"3","upDown1":"down","round1":"15","upDown2":"-","round2":"0","roundSum":"15","tamasu":"840","shutsugenRate":"25.000"}]}');
+				break;
+		    	}
 	
 	    var kishuInfo = dispValue['kishuInfo'];
 
