--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
 <a href="./cal_expected_value.html?id=22">スーパー海物語in沖縄4~桜バージョン 319~</a><br><br>
 <a href="./cal_expected_value.html?id=18">J RASH3 HSJ</a><br><br>
 <a href="./cal_expected_value.html?id=20">真・花の慶次2</a><br><br>
+<a href="./cal_expected_value.html?id=20">銭形平次withでんぱ組.inc SMA</a><br><br>
 <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 
 <hr>
