--- a/index.html
+++ b/index.html
@@ -58,10 +58,11 @@
 <a href="./cal_expected_value.html?id=6">スーパー海物語IN沖縄4 SBB</a><br><br>
 <a href="./cal_expected_value.html?id=9">スーパー海物語in沖縄4~桜バージョン~</a><br><br>
 <a href="./cal_expected_value.html?id=22">スーパー海物語in沖縄4~桜バージョン 319~</a><br><br>
+<a href="./cal_expected_value.html?id=27">J RASH3 RSJ</a><br><br>
 <a href="./cal_expected_value.html?id=18">J RASH3 HSJ</a><br><br>
 <a href="./cal_expected_value.html?id=20">真・花の慶次2</a><br><br>
-<a href="./cal_expected_value.html?id=20">銭形平次withでんぱ組.inc SMA</a><br><br>
-<a href="./cal_expected_value.html?id=20">銭形平次withでんぱ組.inc SAA 1/99</a><br><br>
+<a href="./cal_expected_value.html?id=25">銭形平次withでんぱ組.inc SMA</a><br><br>
+<a href="./cal_expected_value.html?id=26">銭形平次withでんぱ組.inc SAA 1/99</a><br><br>
 <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 
 <hr>
