--- a/cal_expected_value.html
+++ b/cal_expected_value.html
@@ -104,6 +104,7 @@
 				break;
 			case "27":	
 				var dispValue = JSON.parse('{"kishuInfo":{"id":"27","name":"J-RUSH3 HSJ","tokaBorder":"17.000","totalRate":"76.186","denSupRate":"0.570","rironAveDedama":"1154.880","default1R":"96","active":"1"},"kishuAtariInfo":[{"id":"27","no":"1","upDown1":"up","round1":"4","upDown2":"-","round2":"0","roundSum":"4","tamasu":"384","shutsugenRate":"27.000"},{"id":"27","no":"2","upDown1":"up","round1":"14","upDown2":"-","round2":"0","roundSum":"14","tamasu":"1344","shutsugenRate":"73.000"}]}');
+				break;
 		    	}
 	
 	    var kishuInfo = dispValue['kishuInfo'];
