--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
 
 <body>
 
-<title>期待値</title>
+<title>expected value</title>
 
-<h1>期待値計算</h1>
+<h1>calculation</h1>
 
-<h2 id="mokuzi">目次</h2>
+<h2 id="mokuzi">contents</h2>
 <div class="index">
 <a href="#a">あ</a>
 <a href="#ka">か</a>
