--- a/cal_expected_value.html
+++ b/cal_expected_value.html
@@ -395,7 +395,7 @@ console.log(kishuInfo);
 <header>
 <div id="head">
 	<h1>
-		<a href="./emargency.html">期待値</a>
+		<a href="./emargency.html">expected value</a>
 	</h1>
 </div>
 </header>
