--- a/cal_expected_value.html
+++ b/cal_expected_value.html
@@ -107,6 +107,9 @@
 			case "28":
 				var dispValue = JSON.parse('{"kishuInfo":{"id":"28","name":"SUPER電役ナナシーDX 66VV GO12回","tokaBorder":"17.4","totalRate":"52.900","denSupRate":"0.00","rironAveDedama":"762","default1R":"39","active":"1"},"kishuAtariInfo":[{"id":"28","no":"1","upDown1":"-","round1":"0","upDown2":"-","round2":"0","roundSum":"0","tamasu":"370","shutsugenRate":"4.4"},{"id":"28","no":"2","upDown1":"-","round1":"0","upDown2":"-","round2":"0","roundSum":"0","tamasu":"555","shutsugenRate":"3.4"},{"id":"28","no":"3","upDown1":"-","round1":"0","upDown2":"-","round2":"0","roundSum":"0","tamasu":"703","shutsugenRate":"6.3"},{"id":"28","no":"4","upDown1":"up","round1":"5","upDown2":"down","round2":"16","roundSum":"21","tamasu":"800","shutsugenRate":"85.9"}]}');
 				break;	
+			case "29":	
+				var dispValue = JSON.parse('{"kishuInfo":{"id":"29","name":"黄門ちゃま超寿～日本漫遊2700km 199ver L9AZ","tokaBorder":"18.300","totalRate":"78.816","denSupRate":"0.720","rironAveDedama":"1077.600","default1R":"150","active":"1"},"kishuAtariInfo":[{"id":"29","no":"1","upDown1":"down","round1":"2","upDown2":"up","round2":"1","roundSum":"3","tamasu":"450","shutsugenRate":"50.000"},{"id":"29","no":"2","upDown1":"down","round1":"4","upDown2":"-","round2":"0","roundSum":"4","tamasu":"600","shutsugenRate":"19.300"},{"id":"29","no":"3","upDown1":"down","round1":"15","upDown2":"up","round2":"1","roundSum":"16","tamasu":"2400","shutsugenRate":"30.700"}]}');
+				break;	
 		    	}
 	
 	    var kishuInfo = dispValue['kishuInfo'];
