--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
 </h3>
 <a href="./cal_expected_value.html?id=16">ギルティクラウン AA</a><br><br>
 <a href="./cal_expected_value.html?id=13">金田一少年の事件簿２</a><br><br>
+<a href="./cal_expected_value.html?id=29">黄門ちゃま超寿～日本漫遊2700km 199ver L9AZ</a><br><br>
 <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 
 <hr>
