--- a/index.html
+++ b/index.html
@@ -36,6 +36,10 @@
 <a href="./cal_expected_value.html?id=7">大海物語スペシャル SAP13</a><br><br>
 <a href="./cal_expected_value.html?id=8">大海物語2 withアグネスラム SAA</a><br><br>
 <a href="./cal_expected_value.html?id=15">大海物語4 MTB</a><br><br>
+<a href="./cal_expected_value.html?id=4">スーパー海物語IN沖縄4MTC</a><br><br>
+<a href="./cal_expected_value.html?id=6">スーパー海物語IN沖縄4 SBB</a><br><br>
+<a href="./cal_expected_value.html?id=9">スーパー海物語in沖縄4~桜バージョン~</a><br><br>
+<a href="./cal_expected_value.html?id=22">スーパー海物語in沖縄4~桜バージョン 319~</a><br><br>
 <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 
 <hr>
