--- a/cal_expected_value.html
+++ b/cal_expected_value.html
@@ -109,8 +109,10 @@
 				break;	
 			case "29":	
 				var dispValue = JSON.parse('{"kishuInfo":{"id":"29","name":"黄門ちゃま超寿～日本漫遊2700km 199ver L9AZ","tokaBorder":"18.300","totalRate":"78.816","denSupRate":"0.720","rironAveDedama":"1077.600","default1R":"150","active":"1"},"kishuAtariInfo":[{"id":"29","no":"1","upDown1":"down","round1":"2","upDown2":"up","round2":"1","roundSum":"3","tamasu":"450","shutsugenRate":"50.000"},{"id":"29","no":"2","upDown1":"down","round1":"4","upDown2":"-","round2":"0","roundSum":"4","tamasu":"600","shutsugenRate":"19.300"},{"id":"29","no":"3","upDown1":"down","round1":"15","upDown2":"up","round2":"1","roundSum":"16","tamasu":"2400","shutsugenRate":"30.700"}]}');
-				break;	
-		    	}
+				break;
+			case "30":
+			    var dispValue = JSON.parse('{"kishuInfo":{"id":"30","name":" 真.花の慶次 N-2K","tokaBorder":"19.000","totalRate":"40.136","denSupRate":"1.440","rironAveDedama":"611.460","default1R":"90","active":"1"},"kishuAtariInfo":[{"id":"30","no":"1","upDown1":"up","round1":"2","upDown2":"down","round2":"1","roundSum":"3","tamasu":"270","shutsugenRate":"18.900"},{"id":"30","no":"2","upDown1":"up","round1":"4","upDown2":"-","round2":"0","roundSum":"4","tamasu":"360","shutsugenRate":"1.600"},{"id":"30","no":"3","upDown1":"up","round1":"3","upDown2":"down","round2":"1","roundSum":"4","tamasu":"360","shutsugenRate":"3.100"},{"id":"30","no":"4","upDown1":"up","round1":"5","upDown2":"-","round2":"0","roundSum":"5","tamasu":"450","shutsugenRate":"17.200"},{"id":"30","no":"5","upDown1":"up","round1":"4","upDown2":"down","round2":"1","roundSum":"5","tamasu":"450","shutsugenRate":"17.100"},{"id":"30","no":"6","upDown1":"up","round1":"6","upDown2":"down","round2":"1","roundSum":"7","tamasu":"630","shutsugenRate":"26.800"},{"id":"30","no":"7","upDown1":"up","round1":"15","upDown2":"down","round2":"1","roundSum":"16","tamasu":"1440","shutsugenRate":"15.300"}]}');
+		        } 
 	
 	    var kishuInfo = dispValue['kishuInfo'];
 
