--- a/cal_expected_value.html
+++ b/cal_expected_value.html
@@ -116,6 +116,9 @@
 			case "31":
 				var dispValue = JSON.parse('{"kishuInfo":{"id":"31","name":"リング～終焉の刻 FPW","tokaBorder":"20.7","totalRate":"38.846","denSupRate":"1.43","rironAveDedama":"470","default1R":"78","active":"1"},"kishuAtariInfo":[{"id":"31","no":"1","upDown1":"down","round1":"5","upDown2":"-","round2":"0","roundSum":"5","tamasu":"390","shutsugenRate":"90.7"},{"id":"31","no":"2","upDown1":"down","round1":"16","upDown2":"-","round2":"0","roundSum":"16","tamasu":"1248","shutsugenRate":"9.3"}]}');
 				break;
+			case "32":	
+				var dispValue = JSON.parse('{"kishuInfo":{"id":"146","name":"ｽーﾊﾟー海物語 SAE5","tokaBorder":"18.800","totalRate":"34.643","denSupRate":"0.550","rironAveDedama":"475.860","default1R":"77","active":"1"},"kishuAtariInfo":[{"id":"32","no":"1","upDown1":"down","round1":"6","upDown2":"-","round2":"0","roundSum":"6","tamasu":"462","shutsugenRate":"98.000"},{"id":"32","no":"2","upDown1":"down","round1":"15","upDown2":"-","round2":"0","roundSum":"15","tamasu":"1155","shutsugenRate":"2.000"}]}');
+				break;
 		        } 
 	
 	    var kishuInfo = dispValue['kishuInfo'];
