--- a/cal_expected_value.html
+++ b/cal_expected_value.html
@@ -117,7 +117,9 @@
 				var dispValue = JSON.parse('{"kishuInfo":{"id":"31","name":"リング～終焉の刻 FPW","tokaBorder":"20.7","totalRate":"38.846","denSupRate":"1.43","rironAveDedama":"470","default1R":"78","active":"1"},"kishuAtariInfo":[{"id":"31","no":"1","upDown1":"down","round1":"5","upDown2":"-","round2":"0","roundSum":"5","tamasu":"390","shutsugenRate":"90.7"},{"id":"31","no":"2","upDown1":"down","round1":"16","upDown2":"-","round2":"0","roundSum":"16","tamasu":"1248","shutsugenRate":"9.3"}]}');
 				break;
 			case "32":	
-				var dispValue = JSON.parse('{"kishuInfo":{"id":"146","name":"ｽーﾊﾟー海物語 SAE5","tokaBorder":"18.800","totalRate":"34.643","denSupRate":"0.550","rironAveDedama":"475.860","default1R":"77","active":"1"},"kishuAtariInfo":[{"id":"32","no":"1","upDown1":"down","round1":"6","upDown2":"-","round2":"0","roundSum":"6","tamasu":"462","shutsugenRate":"98.000"},{"id":"32","no":"2","upDown1":"down","round1":"15","upDown2":"-","round2":"0","roundSum":"15","tamasu":"1155","shutsugenRate":"2.000"}]}');
+				var dispValue = JSON.parse('{"kishuInfo":{"id":"32","name":"ｽーﾊﾟー海物語 SAE5","tokaBorder":"18.800","totalRate":"34.643","denSupRate":"0.550","rironAveDedama":"475.860","default1R":"77","active":"1"},"kishuAtariInfo":[{"id":"32","no":"1","upDown1":"down","round1":"6","upDown2":"-","round2":"0","roundSum":"6","tamasu":"462","shutsugenRate":"98.000"},{"id":"32","no":"2","upDown1":"down","round1":"15","upDown2":"-","round2":"0","roundSum":"15","tamasu":"1155","shutsugenRate":"2.000"}]}');
+			case "33":		
+			    var dispValue = JSON.parse('{"kishuInfo":{"id":"33","name":"地獄少女 宵伽 FPU","tokaBorder":"16.7","totalRate":"88.555","denSupRate":"1.21","rironAveDedama":"1328","default1R":"117","active":"1"},"kishuAtariInfo":[{"id":"33","no":"1","upDown1":"down","round1":"4","upDown2":"-","round2":"0","roundSum":"4","tamasu":"468","shutsugenRate":"9.2"},{"id":"33","no":"2","upDown1":"down","round1":"7","upDown2":"-","round2":"0","roundSum":"7","tamasu":"819","shutsugenRate":"39.3"},{"id":"33","no":"3","upDown1":"down","round1":"16","upDown2":"-","round2":"0","roundSum":"16","tamasu":"1872","shutsugenRate":"51.5"}]}');
 				break;
 		        } 
 	
