--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
 <a href="#mokuzi">目次に戻る</a><br>
 </h3>
 <a href="./cal_expected_value.html?id=11">地獄少女～弐 FPA 安心ルートver.</a><br><br>
+<a href="./cal_expected_value.html?id=33">地獄少女 宵伽 FPU</a><br><br>
 <a href="./cal_expected_value.html?id=1">真・北斗無双 夢幻闘乱 SWA</a><br><br>
 <a href="./cal_expected_value.html?id=2">真・北斗無双 219ver</a><br><br>
 <a href="./cal_expected_value.html?id=3">真・北斗無双</a><br><br>
