--- a/cal_expected_value.html
+++ b/cal_expected_value.html
@@ -121,6 +121,9 @@
 			case "33":		
 			    var dispValue = JSON.parse('{"kishuInfo":{"id":"33","name":"地獄少女 宵伽 FPU","tokaBorder":"16.7","totalRate":"88.555","denSupRate":"1.21","rironAveDedama":"1328","default1R":"117","active":"1"},"kishuAtariInfo":[{"id":"33","no":"1","upDown1":"down","round1":"4","upDown2":"-","round2":"0","roundSum":"4","tamasu":"468","shutsugenRate":"9.2"},{"id":"33","no":"2","upDown1":"down","round1":"7","upDown2":"-","round2":"0","roundSum":"7","tamasu":"819","shutsugenRate":"39.3"},{"id":"33","no":"3","upDown1":"down","round1":"16","upDown2":"-","round2":"0","roundSum":"16","tamasu":"1872","shutsugenRate":"51.5"}]}');
 				break;
+			case "34":	
+				var dispValue = JSON.parse('{"kishuInfo":{"id":"34","name":"真・北斗無双 マーク 1","tokaBorder":"16.800","totalRate":"86.793","denSupRate":"0.780","rironAveDedama":"1289.120","default1R":"140","active":"1"},"kishuAtariInfo":[{"id":"34","no":"1","upDown1":"up","round1":"4","upDown2":"-","round2":"0","roundSum":"4","tamasu":"560","shutsugenRate":"30.700"},{"id":"34","no":"2","upDown1":"up","round1":"6","upDown2":"-","round2":"0","roundSum":"6","tamasu":"840","shutsugenRate":"27.000"},{"id":"34","no":"3","upDown1":"up","round1":"8","upDown2":"-","round2":"0","roundSum":"8","tamasu":"1120","shutsugenRate":"5.100"},{"id":"34","no":"4","upDown1":"up","round1":"16","upDown2":"-","round2":"0","roundSum":"16","tamasu":"2240","shutsugenRate":"37.200"}]}');
+				break;
 		        } 
 	
 	    var kishuInfo = dispValue['kishuInfo'];
