--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
 <a href="./cal_expected_value.html?id=1">真・北斗無双 夢幻闘乱 SWA</a><br><br>
 <a href="./cal_expected_value.html?id=2">真・北斗無双 219ver</a><br><br>
 <a href="./cal_expected_value.html?id=3">真・北斗無双</a><br><br>
+<a href="./cal_expected_value.html?id=34">真・北斗無双 マーク 1</a><br><br>
 <a href="./cal_expected_value.html?id=27">J RASH3 RSJ</a><br><br>
 <a href="./cal_expected_value.html?id=18">J RASH3 HSJ</a><br><br>
 <a href="./cal_expected_value.html?id=30">真.花の慶次 N-2K</a><br><br>
