--- a/cal_expected_value.html
+++ b/cal_expected_value.html
@@ -128,6 +128,12 @@
 			case "35":	
 			    var dispValue = JSON.parse('{"kishuInfo":{"id":"35","name":"真・北斗無双 マーク 2","tokaBorder":"16.800","totalRate":"86.793","denSupRate":"0.780","rironAveDedama":"1289.120","default1R":"140","active":"1"},"kishuAtariInfo":[{"id":"35","no":"1","upDown1":"up","round1":"4","upDown2":"-","round2":"0","roundSum":"4","tamasu":"560","shutsugenRate":"30.700"},{"id":"35","no":"2","upDown1":"up","round1":"6","upDown2":"-","round2":"0","roundSum":"6","tamasu":"840","shutsugenRate":"27.000"},{"id":"35","no":"3","upDown1":"up","round1":"8","upDown2":"-","round2":"0","roundSum":"8","tamasu":"1120","shutsugenRate":"5.100"},{"id":"35","no":"4","upDown1":"up","round1":"16","upDown2":"-","round2":"0","roundSum":"16","tamasu":"2240","shutsugenRate":"37.200"}]}');
 				break;
+			case "36":
+				var dispValue = JSON.parse('{"kishuInfo":{"id":"36","name":"ドラム海物語 SBB","tokaBorder":"19.9","totalRate":"41.776","denSupRate":"0.59","rironAveDedama":"526","default1R":"67.6","active":"1"},"kishuAtariInfo":[{"id":"36","no":"1","upDown1":"down","round1":"6","upDown2":"-","round2":"0","roundSum":"6","tamasu":"406","shutsugenRate":"39.0"},{"id":"36","no":"2","upDown1":"down","round1":"8","upDown2":"-","round2":"0","roundSum":"8","tamasu":"541","shutsugenRate":"53.0"},{"id":"36","no":"3","upDown1":"down","round1":"15","upDown2":"-","round2":"0","roundSum":"15","tamasu":"1015","shutsugenRate":"8.0"}]}');
+				break;
+            case "37":
+				var dispValue = JSON.parse('{"kishuInfo":{"id":"37","name":"ドラム海物語 BLACK SBC","tokaBorder":"20.2","totalRate":"58.076","denSupRate":"0.55","rironAveDedama":"719","default1R":"87","active":"1"},"kishuAtariInfo":[{"id":"37","no":"1","upDown1":"down","round1":"5","upDown2":"-","round2":"0","roundSum":"5","tamasu":"435","shutsugenRate":"40.2"},{"id":"37","no":"2","upDown1":"down","round1":"8","upDown2":"-","round2":"0","roundSum":"8","tamasu":"696","shutsugenRate":"40.2"},{"id":"37","no":"3","upDown1":"down","round1":"15","upDown2":"-","round2":"0","roundSum":"15","tamasu":"1350","shutsugenRate":"19.6"}]}');
+				break;
 		        } 
 	
 	    var kishuInfo = dispValue['kishuInfo'];
