--- a/index.html
+++ b/index.html
@@ -78,6 +78,8 @@
 <a href="./cal_expected_value.html?id=14">ダーカーブラック-黒の契約者-AA</a><br><br>
 <a href="./cal_expected_value.html?id=23">天翔百裂　FTB</a><br><br>
 <a href="./cal_expected_value.html?id=24">ドラム海物語77DS</a><br><br>
+<a href="./cal_expected_value.html?id=36">ドラム海物語SBB</a><br><br>
+<a href="./cal_expected_value.html?id=37">ドラム海物語BLACK SBC</a><br><br>
 <a href="./cal_expected_value.html?id=28">電役ナナシーDX 66VV GO12回</a><br><br>
 <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 
