--- a/cal_expected_value.html
+++ b/cal_expected_value.html
@@ -134,6 +134,9 @@
             case "37":
 				var dispValue = JSON.parse('{"kishuInfo":{"id":"37","name":"ドラム海物語 BLACK SBC","tokaBorder":"20.2","totalRate":"58.076","denSupRate":"0.55","rironAveDedama":"719","default1R":"87","active":"1"},"kishuAtariInfo":[{"id":"37","no":"1","upDown1":"down","round1":"5","upDown2":"-","round2":"0","roundSum":"5","tamasu":"435","shutsugenRate":"40.2"},{"id":"37","no":"2","upDown1":"down","round1":"8","upDown2":"-","round2":"0","roundSum":"8","tamasu":"696","shutsugenRate":"40.2"},{"id":"37","no":"3","upDown1":"down","round1":"15","upDown2":"-","round2":"0","roundSum":"15","tamasu":"1350","shutsugenRate":"19.6"}]}');
 				break;
+			case "38":	
+				var dispValue = JSON.parse('{"kishuInfo":{"id":"38","name":"渡る世間は鬼ばかり SVA","tokaBorder":"19.300","totalRate":"32.308","denSupRate":"0.94","rironAveDedama":"419.000","default1R":"48","active":"1"},"kishuAtariInfo":[{"id":"38","no":"1","upDown1":"down","round1":"3","upDown2":"-","round2":"0","roundSum":"3","tamasu":"144","shutsugenRate":"31.3"},{"id":"38","no":"2","upDown1":"down","round1":"6","upDown2":"-","round2":"0","roundSum":"6","tamasu":"288","shutsugenRate":"32.000"},{"id":"38","no":"3","upDown1":"down","round1":"16","upDown2":"-","round2":"0","roundSum":"16","tamasu":"768","shutsugenRate":"36.8"}]}');
+				break;
 		        } 
 	
 	    var kishuInfo = dispValue['kishuInfo'];
