--- a/index.html
+++ b/index.html
@@ -124,6 +124,7 @@
 <h3 id="wa">わ行
 <a href="#mokuzi">目次に戻る</a><br>
 </h3>
+<a href="./cal_expected_value.html?id=38">渡る世間は鬼ばかり SVA</a><br><br>
 <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 
 </body>
