--- a/cal_expected_value.html
+++ b/cal_expected_value.html
@@ -137,6 +137,9 @@
 			case "38":	
 				var dispValue = JSON.parse('{"kishuInfo":{"id":"38","name":"渡る世間は鬼ばかり SVA","tokaBorder":"19.300","totalRate":"32.308","denSupRate":"0.94","rironAveDedama":"419.000","default1R":"48","active":"1"},"kishuAtariInfo":[{"id":"38","no":"1","upDown1":"down","round1":"3","upDown2":"-","round2":"0","roundSum":"3","tamasu":"144","shutsugenRate":"31.3"},{"id":"38","no":"2","upDown1":"down","round1":"6","upDown2":"-","round2":"0","roundSum":"6","tamasu":"288","shutsugenRate":"32.000"},{"id":"38","no":"3","upDown1":"down","round1":"16","upDown2":"-","round2":"0","roundSum":"16","tamasu":"768","shutsugenRate":"36.8"}]}');
 				break;
+			case "39":	
+				var dispValue = JSON.parse('{"kishuInfo":{"id":"39","name":"サイボーグ009VSデビルマン L-T","tokaBorder":"20.000","totalRate":"86.468","denSupRate":"0.600","rironAveDedama":"1081.000","default1R":"112","active":"1"},"kishuAtariInfo":[{"id":"39","no":"1","upDown1":"up","round1":"2","upDown2":"-","round2":"0","roundSum":"2","tamasu":"70","shutsugenRate":"2.500"},{"id":"39","no":"2","upDown1":"up","round1":"4","upDown2":"-","round2":"0","roundSum":"4","tamasu":"448","shutsugenRate":"41.400"},{"id":"39","no":"3","upDown1":"up","round1":"8","upDown2":"-","round2":"0","roundSum":"8","tamasu":"896","shutsugenRate":"12.500"},{"id":"39","no":"4","upDown1":"up","round1":"16","upDown2":"-","round2":"0","roundSum":"16","tamasu":"1792","shutsugenRate":"43.600"}]}');
+				break;
 		        } 
 	
 	    var kishuInfo = dispValue['kishuInfo'];
