--- a/cal_expected_value.html
+++ b/cal_expected_value.html
@@ -140,6 +140,9 @@
 			case "39":	
 				var dispValue = JSON.parse('{"kishuInfo":{"id":"39","name":"サイボーグ009VSデビルマン L-T","tokaBorder":"20.000","totalRate":"86.468","denSupRate":"0.600","rironAveDedama":"1081.000","default1R":"112","active":"1"},"kishuAtariInfo":[{"id":"39","no":"1","upDown1":"up","round1":"2","upDown2":"-","round2":"0","roundSum":"2","tamasu":"70","shutsugenRate":"2.500"},{"id":"39","no":"2","upDown1":"up","round1":"4","upDown2":"-","round2":"0","roundSum":"4","tamasu":"448","shutsugenRate":"41.400"},{"id":"39","no":"3","upDown1":"up","round1":"8","upDown2":"-","round2":"0","roundSum":"8","tamasu":"896","shutsugenRate":"12.500"},{"id":"39","no":"4","upDown1":"up","round1":"16","upDown2":"-","round2":"0","roundSum":"16","tamasu":"1792","shutsugenRate":"43.600"}]}');
 				break;
+			case "40":	
+				var dispValue = JSON.parse('{"kishuInfo":{"id":"40","name":"CR攻殻機動隊S.A.C CXB","tokaBorder":"17.300","totalRate":"34.903","denSupRate":"0.120","rironAveDedama":"507.000","default1R":"81","active":"1"},"kishuAtariInfo":[{"id":"40","no":"1","upDown1":"down","round1":"4","upDown2":"-","round2":"0","roundSum":"4","tamasu":"324","shutsugenRate":"69.700"},{"id":"40","no":"2","upDown1":"down","round1":"8","upDown2":"-","round2":"0","roundSum":"8","tamasu":"648","shutsugenRate":"3.800"},{"id":"40","no":"3","upDown1":"down","round1":"12","upDown2":"-","round2":"0","roundSum":"12","tamasu":"972","shutsugenRate":"26.500"}]}');
+				break;
 		        } 
 	
 	    var kishuInfo = dispValue['kishuInfo'];
